--- a/contrib/debian/rules
+++ b/contrib/debian/rules
@@ -8,3 +8,8 @@ include /usr/share/cdbs/1/rules/autoreconf.mk
 export DEB_BUILDDIR=$(DEB_SRCDIR)/build
 export DEB_BUILD_HARDENING=1
 export DEB_CONFIGURE_EXTRA_FLAGS += --enable-release
+export DEB_CONFIGURE_EXTRA_FLAGS += --with-java
+export DEB_CONFIGURE_EXTRA_FLAGS += --with-perl5
+export DEB_CONFIGURE_EXTRA_FLAGS += --with-php
+export DEB_CONFIGURE_EXTRA_FLAGS += --with-python
+export DEB_CONFIGURE_EXTRA_FLAGS += --with-ruby
