--- a/contrib/debian/control
+++ b/contrib/debian/control
@@ -5,7 +5,7 @@ Maintainer: Fellow Traveler <FellowTraveler@rayservers.net>
 Uploaders: Mark Friedenbach <mark@monetize.io>
 Build-Depends: debhelper, cdbs, dh-autoreconf,
  autotools-dev, pkg-config, chaiscript (>= 3.1.0), libboost-thread-dev (>= 1.25.0), libzmq-dev (>= 2.1.4), libmsgpack-dev, libprotobuf-dev (>= 2.4.1), libssl-dev (>= 1.0.0),
- openjdk-6-jdk, openjdk-6-source, php5-dev, python-dev
+ openjdk-6-jdk, openjdk-6-source, php5-dev
 Standards-Version: 3.9.3
 Homepage: https://github.com/FellowTraveler/Open-Transactions/
 Vcs-Git: git://github.com/FellowTraveler/Open-Transactions.git
